.devops/terraform/01-vpc.tf
resource "aws_vpc" "meli_main" {
  cidr_block = "10.0.0.0/16"

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "meli_main"
  }
}
